--- a/GOAL Release 2.0.0/Base.lproj/Main.storyboard
+++ b/GOAL Release 2.0.0/Base.lproj/Main.storyboard
@@ -49,12 +49,9 @@
                                     </mask>
                                 </variation>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ci8-Rb-SWs">
-                                <rect key="frame" x="476" y="54" width="90" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ci8-Rb-SWs">
+                                <rect key="frame" x="476" y="65" width="90" height="30"/>
                                 <color key="backgroundColor" red="0.98823529409999999" green="0.30196078430000001" blue="0.26274509800000001" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="90" id="Sap-Pc-WwQ"/>
-                                </constraints>
                                 <state key="normal" title="get points! ">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -66,10 +63,10 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="NVS-41-ZHc" firstAttribute="top" secondItem="cMb-vH-TZf" secondAttribute="bottom" constant="44" id="1o1-fo-tL2"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="ci8-Rb-SWs" secondAttribute="trailing" constant="14" id="B5k-qf-LPt"/>
                             <constraint firstItem="cMb-vH-TZf" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" constant="27" id="CrB-qU-pOp"/>
                             <constraint firstItem="NVS-41-ZHc" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" constant="-20" id="QjM-vc-1XG"/>
-                            <constraint firstItem="ci8-Rb-SWs" firstAttribute="top" secondItem="tsR-hK-woN" secondAttribute="topMargin" constant="54" id="bAn-aa-ORt"/>
+                            <constraint firstItem="ci8-Rb-SWs" firstAttribute="leading" secondItem="cMb-vH-TZf" secondAttribute="trailing" constant="324" id="j2L-hv-Gdj"/>
+                            <constraint firstItem="NVS-41-ZHc" firstAttribute="top" secondItem="ci8-Rb-SWs" secondAttribute="bottom" constant="44" id="o80-n4-tYs"/>
                             <constraint firstItem="cMb-vH-TZf" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" constant="54" id="oaf-86-eI1"/>
                         </constraints>
                     </view>
@@ -128,6 +125,9 @@
                                 <state key="normal" title="Cancel">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="Bsv-N4-fBa" kind="unwind" unwindAction="UnWindAction:" id="TOj-im-h84"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.98823529409999999" green="0.30196078430000001" blue="0.26274509800000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -142,8 +142,13 @@
                             <constraint firstItem="9Pq-ub-BR5" firstAttribute="leading" secondItem="htZ-ao-3Kl" secondAttribute="trailing" constant="98" id="zeM-I0-Ts8"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="codeDialogue" destination="Zvx-FL-Xx4" id="Yb0-Nx-3DD"/>
+                        <outlet property="codeInput" destination="Leh-Rv-LC0" id="wFI-tl-HTy"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="psp-sb-0bO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="Bsv-N4-fBa" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1504" y="-266"/>
         </scene>
