--- a/GOAL Release 2.0.0/Base.lproj/Main.storyboard
+++ b/GOAL Release 2.0.0/Base.lproj/Main.storyboard
@@ -119,7 +119,6 @@
                                 </state>
                                 <connections>
                                     <action selector="getPoints:" destination="28n-Mq-0q9" eventType="touchUpInside" id="922-IH-ckq"/>
-                                    <segue destination="9pv-A4-QxB" kind="show" identifier="PointsAchieved" id="10A-qW-Cv2"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Pq-ub-BR5">
@@ -152,6 +151,7 @@
                     <connections>
                         <outlet property="codeDialogue" destination="Zvx-FL-Xx4" id="Yb0-Nx-3DD"/>
                         <outlet property="codeInput" destination="Leh-Rv-LC0" id="wFI-tl-HTy"/>
+                        <segue destination="9pv-A4-QxB" kind="show" identifier="PointsAchieved" id="deY-jb-fVw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="psp-sb-0bO" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -182,6 +182,6 @@
         <image name="first" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="10A-qW-Cv2"/>
+        <segue reference="deY-jb-fVw"/>
     </inferredMetricsTieBreakers>
 </document>
