--- a/GOAL Release 2.0.0/Base.lproj/Main.storyboard
+++ b/GOAL Release 2.0.0/Base.lproj/Main.storyboard
@@ -22,36 +22,20 @@
                                 <rect key="frame" x="47" y="74" width="105" height="21"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="105" id="QZA-Bq-XlV"/>
                                     <constraint firstAttribute="width" constant="105" id="kH6-qe-bYw"/>
+                                    <constraint firstAttribute="height" constant="21" id="yd5-eh-ePJ"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="1" green="0.39629123119999998" blue="0.2364814496" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="JZW-Og-LrR"/>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="  Upcoming Events" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="43" translatesAutoresizingMaskIntoConstraints="NO" id="NVS-41-ZHc">
-                                <rect key="frame" x="0.0" y="139" width="695" height="36"/>
-                                <color key="backgroundColor" red="1" green="0.39458076149999999" blue="0.32654243500000002" alpha="1" colorSpace="calibratedRGB"/>
-                                <color key="tintColor" red="1" green="0.31283206698779209" blue="0.9549288235321286" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="0K4-2s-Qt5"/>
-                                    <constraint firstAttribute="width" constant="695" id="CXT-Es-Uht"/>
-                                    <constraint firstAttribute="height" constant="21" id="XmD-fF-jp8"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <color key="highlightedColor" red="1" green="0.39629123119999998" blue="0.2364814496" alpha="1" colorSpace="calibratedRGB"/>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="0K4-2s-Qt5"/>
-                                        <exclude reference="XmD-fF-jp8"/>
-                                    </mask>
-                                </variation>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ci8-Rb-SWs">
                                 <rect key="frame" x="476" y="65" width="90" height="30"/>
                                 <color key="backgroundColor" red="0.98823529409999999" green="0.30196078430000001" blue="0.26274509800000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="K9v-Ds-bha"/>
                                     <constraint firstAttribute="width" constant="90" id="pzc-l7-h2M"/>
                                 </constraints>
                                 <state key="normal" title="get points! ">
@@ -61,60 +45,32 @@
                                     <segue destination="28n-Mq-0q9" kind="show" id="Ua2-Hm-PZx"/>
                                 </connections>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Rne-Ja-eh2">
-                                <rect key="frame" x="0.0" y="174" width="600" height="426"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="KCEventTableViewCell" rowHeight="90" id="wcb-Mw-0EM" customClass="KCEventTableViewCell" customModule="GOAL_Release_2_0_0" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="600" height="90"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wcb-Mw-0EM" id="x5d-qb-bOw">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="89"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="haN-PC-F4O">
-                                                    <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Event Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fa9-C9-af6" customClass="KCEvent" customModule="GOAL_Release_2_0_0" customModuleProvider="target">
-                                                    <rect key="frame" x="98" y="60" width="224" height="23"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Event Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bLD-Fx-1oK" customClass="KCEvent" customModule="GOAL_Release_2_0_0" customModuleProvider="target">
-                                                    <rect key="frame" x="424" y="58" width="168" height="23"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Event Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y5J-wI-Ad5" customClass="KCEvent" customModule="GOAL_Release_2_0_0" customModuleProvider="target">
-                                                    <rect key="frame" x="98" y="10" width="494" height="42"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="  Upcoming Events" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="43" translatesAutoresizingMaskIntoConstraints="NO" id="NVS-41-ZHc">
+                                <rect key="frame" x="0.0" y="139" width="600" height="36"/>
+                                <color key="backgroundColor" red="1" green="0.39458076149999999" blue="0.32654243500000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="tintColor" red="1" green="0.31283206698779209" blue="0.9549288235321286" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="600" id="2M6-1I-AzC"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="36" id="Kmi-sV-Wbf"/>
+                                    <constraint firstAttribute="width" constant="600" id="LHP-0F-wuA"/>
+                                    <constraint firstAttribute="height" constant="36" id="uRl-KF-jg9"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="highlightedColor" red="1" green="0.39629123119999998" blue="0.2364814496" alpha="1" colorSpace="calibratedRGB"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="NVS-41-ZHc" firstAttribute="leading" secondItem="JZW-Og-LrR" secondAttribute="leading" id="11t-su-RV8"/>
                             <constraint firstItem="cMb-vH-TZf" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" constant="27" id="3Rs-bb-prp"/>
                             <constraint firstItem="JZW-Og-LrR" firstAttribute="top" secondItem="tsR-hK-woN" secondAttribute="top" id="58R-9o-TK2"/>
-                            <constraint firstItem="NVS-41-ZHc" firstAttribute="top" secondItem="cMb-vH-TZf" secondAttribute="bottom" constant="44" id="6M7-zR-0qs"/>
                             <constraint firstAttribute="bottom" secondItem="JZW-Og-LrR" secondAttribute="bottom" constant="600" id="KXJ-pl-axI"/>
-                            <constraint firstAttribute="trailing" secondItem="Rne-Ja-eh2" secondAttribute="trailing" id="LpG-bU-sEt"/>
+                            <constraint firstItem="NVS-41-ZHc" firstAttribute="top" secondItem="cMb-vH-TZf" secondAttribute="bottom" constant="44" id="Rc2-Wo-opw"/>
+                            <constraint firstItem="NVS-41-ZHc" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" constant="-20" id="XSA-wB-RiH"/>
                             <constraint firstAttribute="trailingMargin" secondItem="ci8-Rb-SWs" secondAttribute="trailing" constant="14" id="Xvd-o0-cVQ"/>
-                            <constraint firstItem="Rne-Ja-eh2" firstAttribute="bottom" secondItem="4ug-Mw-9AY" secondAttribute="top" id="YXF-Ud-b9O"/>
                             <constraint firstItem="cMb-vH-TZf" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" constant="54" id="Ynb-VY-7Dp"/>
-                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="NVS-41-ZHc" secondAttribute="bottom" constant="425" id="YpL-nz-OPz"/>
                             <constraint firstItem="ci8-Rb-SWs" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" constant="45" id="dui-c5-mVg"/>
-                            <constraint firstItem="Rne-Ja-eh2" firstAttribute="top" secondItem="ci8-Rb-SWs" secondAttribute="bottom" constant="79" id="f2H-W2-pKl"/>
                             <constraint firstItem="cMb-vH-TZf" firstAttribute="bottom" secondItem="ci8-Rb-SWs" secondAttribute="bottom" id="oKz-3X-tCJ"/>
-                            <constraint firstItem="Rne-Ja-eh2" firstAttribute="leading" secondItem="NVS-41-ZHc" secondAttribute="leading" id="qjw-3a-Zdz"/>
                             <constraint firstAttribute="trailing" secondItem="JZW-Og-LrR" secondAttribute="trailing" constant="600" id="sX7-84-izx"/>
                             <constraint firstItem="JZW-Og-LrR" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" id="xcE-Ox-Pj4"/>
                         </constraints>
