Added more cells to the windows, but have not yet actually seen them appear on screen.

--- a/GOAL Release 2.0.0/Base.lproj/Main.storyboard
+++ b/GOAL Release 2.0.0/Base.lproj/Main.storyboard
@@ -245,6 +245,6 @@
         <image name="first" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="deY-jb-fVw"/>
+        <segue reference="u7Y-xg-7CH"/>
     </inferredMetricsTieBreakers>
 </document>
